--- a/pom.xml
+++ b/pom.xml
@@ -61,59 +61,50 @@
   		<dependency>
 			<groupId>com.seda.emailsender.webservices.client</groupId>
 			<artifactId>com.seda.emailsender.webservices.client</artifactId>
-			<version>1.0</version>
+			<version>1.1.0</version> <!-- LP 20240907 - PAGONET-604 -->
 			<scope>compile</scope>
 		</dependency>
-
   		<dependency>
   			<groupId>commons-io</groupId>
   			<artifactId>commons-io</artifactId>
   		</dependency>
-
 		<dependency>
 			<groupId>log4j</groupId>
 			<artifactId>log4j</artifactId>
 			<version>1.2.17</version>
 			<scope>compile</scope>
 		</dependency>
-
 		<dependency>
 			<groupId>com.seda.payer.core</groupId>
 			<artifactId>com.seda.payer.core</artifactId>
 			<version>2.17.2</version>
 			<scope>compile</scope>
 		</dependency>
-
 		<dependency>
 			<groupId>org.apache.axis</groupId>
 			<artifactId>axis</artifactId>
 		</dependency>
-
 		<dependency>
 		    <groupId>mysql</groupId>
 		    <artifactId>mysql-connector-java</artifactId>
-		    <version>5.1.48</version>
+		    <!-- <version>5.1.48</version> --> <!-- LP 20240907 - PAGONET-604 -->
 		</dependency>
-
 		<dependency>
 			<groupId>com.seda.bap.components</groupId>
 			<artifactId>com.seda.bap.components</artifactId>
 			<version>1.0</version>
 			<scope>compile</scope>
 		</dependency>
-
 		<dependency>
 			<groupId>wsdl4j</groupId>
 			<artifactId>wsdl4j</artifactId>
-			<version>1.6.2</version>
+			<!-- <version>1.6.2</version> --> <!-- LP 20240907 - PAGONET-604 -->
 			<scope>compile</scope>
 		</dependency>
-
 		<dependency>
 		    <groupId>org.apache.ant</groupId>
 		    <artifactId>ant</artifactId>
 		    <version>1.10.12</version>
 		</dependency>
-
 	</dependencies>
 </project>
